--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Document</title>
+    <title>resume</title>
     <style>
       body {
         line-height: 22px;
@@ -14,7 +14,7 @@
         padding: 5% 10%;
       }
       section {
-        margin: 40px 0 60px;
+        margin: 40px 0 ;
       }
       section p {
         margin: 0;
@@ -77,7 +77,7 @@
             Front End:
             <span
               >HTML5, CSS3, JavaScript, Bootstrap, JQuery, ReactJS,
-              FontAwesome</span
+              RWD</span
             >
           </li>
           <li>Back End: <span>Node.js</span></li>
@@ -122,13 +122,16 @@
       <section>
         <h3>LANGUAGES</h3>
         <ul>
-          <li>English (Verbal and Written), Chinese Mandarin (Verbal and Written)</li>
+          <li>
+            English (Verbal and Written), Chinese Mandarin (Verbal and Written)
+          </li>
         </ul>
       </section>
       <section>
         <h3>EDUCATION</h3>
         <ul>
-          <li>FU-JEN University, B.S in Food Science</li>
+          <li>Institute For Information Industry(資策會) (06/2019 - 12/2019)</li>
+          <li>FU-JEN University, B.S in Food Science (09/2010 - 01/2015)</li>
         </ul>
       </section>
     </div>
