--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>resume</title>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.9/css/all.css"
     integrity="sha384-5SOiIsAziJl6AWe0HWRKTXlfcSHKmYV4RBF18PPJ173Kzn7jzMyFuTtk8JA7QQG1" crossorigin="anonymous">
   </link>
@@ -24,10 +24,6 @@
         <div class="info">
           <span class="i-box"><i class="far fa-envelope"></i></span>
           <span>feliciajiang12@gmail.com</span>
-        </div>
-        <div class="info">
-          <span class="i-box"><i class="fas fa-mobile-alt"></i></span>
-          <span>+886 911-003-909</span>
         </div>
         <div class="info">
           <span class="i-box"><i class="fab fa-github"></i></span>
